
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2022 JAN 14a
  * in model/chem/_Air_Plasma_11s/
    - added kim2021.c and kim2021.h
  * in model/chem/_Air_Plasma_11s/chem.c and model/chem/_Air_Plasma_11s/chem.hh
    - incorporated the kim2021 model
  * in model/chem/_Air_Plasma_11s/doc/report.tex
    - added the kim2021 model documentation
  * in src/control.c
    - changed the copyright years for Bernard Parent to include 2022
    

2021 DEC 07a
  * in model/fluid/doc/Transport_Equations/report.tex
    - added a section on the Thermionic Emission Boundary Condition
  * in model/metrics/_generic/metrics.c
    - in _distance_between_near_bdry_node_and_boundary_plane(), added i,j,k position of problematic
      node before the fatal_error
  

2021 NOV 17a
  * in model/fluid/_Navier-Stokes_plasma/fluid_bdry.c
    - in update_bdry_wall(), fixed a bug related to CATALYTIC and INJECTION wall conditions:
      np[lA].numbdryparam-2 should be np[lA].numbdryparam-1
      

2021 NOV 12a
  * in model/fluid/_Navier-Stokes_plasma/fluid.c
    - in write_model_fluid_template() and read_model_fluid_actions(), took away reading in
      gamma (secondary electron emission coefficient at the surface) as a global parameter
  * in model/fluid/_Navier-Stokes_plasma/fluid_bdry.c
    - in write_bdry_fluid_template() and update_bdry_wall() made changes so that gamma is now read
      as an additional argument to the boundary condition call and not as a global parameter
    - in update_bdry_wall(), took away secondary electron emission in the case of a thermionic
      boundary condition
      

2021 OCT 30a
  * in model/fluid/_Navier-Stokes/fluid_bdry.c and model/fluid/_Favre-Reynolds_Tv/fluid_bdry.c