@@ -7,6 +7,11 @@ ________________________________________________________________________________
 _____________________________________________________________________________________________________
 
 
+2022 JAN 16a
+  * in src/control.c
+    - added kim2021a citation
+    
+
 2022 JAN 14a
   * in model/chem/_Air_Plasma_11s/
     - added kim2021.c and kim2021.h
